=========================================
= CHANGES BETWEEN COQ V8.3 AND COQ V8.4 =
=========================================

** Removal of Tacinterp.constr_of_id **

Use instead either global_reference or construct_reference in constrintern.ml.

** Optimizing calls to Evd functions **

Evars are split into defined evars and undefined evars; for
efficiency, when an evar is known to be undefined, it is preferable to
use specific functions about undefined evars since these ones are
generally fewer than the defined ones.

** Type changes in TACTIC EXTEND rules **

Arguments bound with tactic(_) in TACTIC EXTEND rules are now of type
glob_tactic_expr, instead of glob_tactic_expr * tactic. Only the first
component is kept, the second one can be obtained via
Tacinterp.eval_tactic.

** ARGUMENT EXTEND **

It is now forbidden to use TYPED simultaneously with {RAW,GLOB}_TYPED
in ARGUMENT EXTEND statements.

** Renaming of rawconstr to glob_constr **

The "rawconstr" type has been renamed to "glob_constr" for
consistency. The "raw" in everything related to former rawconstr has
been changed to "glob". For more details about the rationale and
scripts to migrate code using Coq's internals, see commits 13743,
13744, 13755, 13756, 13757, 13758, 13761 (by glondu, end of December
2010) in Subversion repository. Contribs have been fixed too, and
commit messages there might also be helpful for migrating.

=========================================
= CHANGES BETWEEN COQ V8.2 AND COQ V8.3 =
=========================================

** Light cleaning in evarutil.ml **

whd_castappevar is now whd_head_evar
obsolete whd_ise disappears

** Restructuration of the syntax of binders **

binders_let -> binders
binders_let_fixannot -> binders_fixannot
binder_let -> closed_binder (and now covers only bracketed binders)
binder was already obsolete and has been removed

** Semantical change of h_induction_destruct **

Warning, the order of the isrec and evar_flag was inconsistent and has